# claude-role-framework

./: .gitignore  CONVERSATION-ARCHIVE.md  PHASE1-PLAN.md  PHASE1-REVIEW.md  PHASE1-STATUS.md  PROJECT-TRACKER.md  README-VIEWER.md  README.md  RESUME-INSTRUCTIONS.md  REVIEW-REPORT.md  SESSION-LOG-2026-01-06-SUBMISSION.md  SPECIFICATION.md  START-HERE-ON-RETURN.md  START_HERE.md  SUBMISSION-CHECKLIST.md  SUBMISSION-PACKAGE.md  TRANSITION-PLAN.md  app.js  conversation-log-session-2.md  conversation-log.md  data.js  generate_data.py  start_here_on_return.md  styles.css  viewer.html
docs/: 01-introduction.md  02-core-concepts.md  03-use-cases.md  04-implementation.md
examples/business/: data-analyst.json  domain.json  marketing-manager.json  product-manager.json
examples/development/: backend-developer.json  devops-engineer.json  domain.json  frontend-developer.json  full-stack-developer.json
examples/finance/: accountant.json  controller.json  domain.json  (+1 more)
forrest-protocol/: PROJECT-STATUS.md  README.md
project-tracker/: README.md  pyproject.toml
project-tracker/src/project_tracker/: __init__.py  main.py
project-tracker/src/project_tracker/routes/: __init__.py  api.py  dashboard.py
project-tracker/src/project_tracker/services/: __init__.py  file_scanner.py  metrics.py  todo_parser.py
project-tracker/src/project_tracker/templates/: base.html  dashboard.html
project-tracker/src/project_tracker/templates/components/: agents.html  progress.html  timeline.html  todos.html
project-tracker/static/css/: styles.css
project-tracker/static/js/: dashboard.js
(+42 files in other folders)
